force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/ssot__CommunicationSubscriptionConsent__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Is used to store the preferences for one engagement channel on one communication subscription (channel). Created by care coordinator/patient.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Privacy Consent</referenceEntityGroup>
        <referenceEntityName>CommunicationSubscriptionConsent</referenceEntityName>
        <referenceEntitySubjectArea>Privacy Consent</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>