force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__CommunicationSubscriptionChannelType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommunicationSubscriptionChannelType__c</fullName>
    <label>Communication Subscription Channel Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CommunicationSubscriptionChannelType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>