force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__ContactPointConsentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointConsentId__c</fullName>
    <label>Contact Point Consent</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactPointConsentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>