force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__ContactPointValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointValueText__c</fullName>
    <label>Contact Point Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactPointValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>