force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__EngagementChannelTypeConsentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelTypeConsentId__c</fullName>
    <label>Engagement Channel Type Consent</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelTypeConsentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>