force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__rel_1696932794482_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1696932794482_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommunicationSubscriptionConsent_Com_rel</label>
    <referenceTo>ssot__CommunicationSubscriptionChannelType__dlm</referenceTo>
    <relationshipLabel>CommunicationSubscriptionConsent_Com_rel</relationshipLabel>
    <relationshipName>rel_1696932794482_end</relationshipName>
    <type>Lookup</type>
</CustomField>