force-app/main/default/objects/ssot__CommunicationSubscriptionConsent__dlm/fields/ssot__rel_1697761157063_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761157063_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommunicationSubscriptionConsent_Con_rel</label>
    <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
    <relationshipLabel>CommunicationSubscriptionConsent_Con_rel</relationshipLabel>
    <relationshipName>rel_1697761157063_end</relationshipName>
    <type>Lookup</type>
</CustomField>